# ha_City-Visitor-Parking

./: .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  MIGRATION.md  README.md  README.md.bak  RELEASING.md  SECURITY.md  bak.frontend_files.yaml  hacs.json  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  requirements_test.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh  update-content.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  hacs.yml  labeler.yml  labels.yml  release-drafter-beta.yml  release-drafter-testing.yml  release-drafter.yml  renovate.json  tests.yml  update_changelog.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/hassfest/: action.yml  problem-matcher.json
.github/codeql/: codeql-config.yml
.github/scripts/: update_changelog.py
.github/workflows/: auto-assign.yml  codeql.yml  conventional-label.yml  dependency-review.yml  hacs.yml  hassfest.yml  labeler.yml  labels.yml  lint.yml  lock.yml  pr-labeler.yml  pr-labeling.yml  pr-labels.yml  release-drafter.yml  release.yaml  release.yml  stale.yml  sync-python-version.yml  tests.yml  update-changelog.yml  validate.yml  zizmor.yml
blueprints/: README.md  smart_parking_registration_en.yaml  smart_parking_registration_nl.yaml
custom_components/city_visitor_parking/: .gitattributes  AGENTS.md  __init__.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  helpers.py  manifest.json  models.py  payloads.py  providers.yaml  quality_scale.yaml  runtime_data.py  sensor.py  services.py  services.yaml  strings.json  time_windows.py  version.py  websocket_api.py
custom_components/city_visitor_parking/frontend/: .eslintrc.cjs  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
custom_components/city_visitor_parking/frontend/src/: base.ts  card-active.ts  card-editor-shared.ts  card-parking.ts  card-shared.ts  city-visitor-parking-active-card-editor.ts  city-visitor-parking-active-card.ts  city-visitor-parking-card-editor.ts  city-visitor-parking-card.ts  editor-active.ts  editor-parking.ts  helpers.ts  index.ts  localize.ts  translations.ts  types.ts  ui.ts
custom_components/city_visitor_parking/frontend/src/translations/: en.json  nl.json
custom_components/city_visitor_parking/translations/: en.json  nl.json
docs/: QUALITY_SCALE.md  README.md  cards.md  privacy.md  screenshots.md  services.md  troubleshooting.md
docs/examples/: automations.md
docs/nl/: README.md
scripts/: check_dvsportal_api_urls.py  dvsportal_api_url_check_report.md  run-frontend-tool.sh  run-hassfest.sh  run-python-tool.sh  set_pycvp_dependency.py
tests/: conftest.py
tests/components/city_visitor_parking/: test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_init.py  test_options_flow.py  test_payloads.py  test_services.py  test_time_windows.py  test_translations.py  test_version.py  test_websocket_api.py
